# challenge-iclr-2022

./: .gitignore  Neural_SEED_smORFs.ipynb  README.md  TreeEmbeddings.ipynb  TreeRep.py  pyproject.toml  requirements.txt  test_script.sh
.github/workflows/: test.yml
1st-prize__rsonthal__xfcui__Tree-Embeddings/: CSphd.csv  TreeEmbed.py  prior.py  utilities.py
DmitriyNielsen/: Notebook.ipynb
NeuroSEED-master/: Neural_SEED_smORFs.ipynb  NeuroSEED.ipynb  README.md  create_comparison_graph.ipynb  neuroSEED.py  smorf_use_backend_functions.py
WGPR/: Wrapped_Gaussian_Process_Regression_on_Riemannian_Manifolds.ipynb
andberger/: _config.yml  refs.bib  rie_sne.ipynb  riesne.py  riesne_utils.py
david-klindt_TEDDY/: data_helper.py  model.py  teddy.ipynb
dmitriynielsen/: Brownian_motion_on_manifold_sampler.ipynb
klindt__Topological-Ensemble-Detection/: geomstats_additions.py  tda_helper.py  teddy.ipynb
rsonthal_xfcui/: TreeEmbed.py  TreeEmbeddings.ipynb  TreeRep-2.py  TreeRep.py  TreeRepresentation-2.py  TreeRepresentation.py  TreeSpace.py  embedding_mpmath.py
submission-example-1/: Example notebook using RMS.ipynb  README.md  clustering_using_riemannian_mean_shift_algorithm.ipynb  geomstats_challenge-iclr-2022_ GitHub repository for the ICLR Computational Geometry & Topology Challenge 2021.html  riemannian_mean_shift.py
testing_1/: testing_1.ipynb
tszwagier_apignet/: tszwagier_apignet_wgp.ipynb
vontycowicz/: analysis_in_tangent_bundle.ipynb
vontycowicz__Analysis-in-Tangent-Bundle/: pre_shape_autodiff.py  sasaki_metric.py  util.py
(+137 files in other folders)
