[tool.poetry]
name = "challenge-iclr-2022"
version = "0.1.0"
description = ""
authors = ["Saiteja Utpala <saitejautpala@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
autograd= "^1.0"
geomstats = "^2.4.2"
joblib = "^1.1.0"
jupyter = "^1.0.0"
matplotlib = "^3.5.1"
nbconvert = "^6.4.4"
numpy = "^1.22.3"
openml = "^0.12.2"
pandas = "^1.4.1"
plotly = "^5.6.0"
scikit-learn = "^1.0.2"
scipy = "^1.4.1"
pytest = "^7.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
